Kubernetes/k8's_objects/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: [namespace-name]
  labels:
    name: test
