Kubernetes/k8's_objects/Labelsets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  selector:
    matchLabels:
      environment:
        - production
        - staging
