Kubernetes/k8's_objects/LabelExpressions.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    matchExpressions:
    - {key: environment, operator: In, values: [production, staging]}
    - {key: tier, operator: NotIn, values: [database]}
